<resources>
    <string name="app_name">AI-DISC</string>
    <string name="version">17.5</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_imageview">Imageview</string>
    <string name="title_activity_view_image">View_image</string>
    <string name="title_activity_form">Form</string>
    <string name="title_activity_image_capture">Image_capture</string>
    <string name="title_activity_camera_work">Camera_work</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_validator_profile">Validator_profile</string>
    <string name="title_activity_admin_profile">Admin_profile</string>
    <string name="title_activity_add_crop">Add_crop</string>
    <string name="title_activity_add_crop1">Add_crop1</string>
    <string name="title_activity_disease_list">Disease_list</string>
    <string name="title_activity_add_insect">Add_insect</string>
    <string name="title_activity_add_stage">Add_stage</string>
    <string name="title_activity_account_validator">Account_validator</string>
    <string name="title_activity_list_account">List_account</string>
    <string name="title_activity_account_data_entry">Account_data_entry</string>
    <string name="title_activity_validator_data_entry">Validator_data_entry</string>
    <string name="title_activity_list_validator_admin">List_validator_admin</string>
    <string name="title_activity_list_data_entry_admin">List_data_entry_admin</string>
    <string name="title_activity_list_record_image">List_record_image</string>
    <string name="title_activity_validator_image_record">Validator_image_record</string>
    <string name="title_activity_add_image_data">Add_image_data</string>
    <string name="title_activity_view_image_data">View_image_data</string>
    <string name="title_activity_account_model_developer">account_model_developer</string>
    <string name="title_activity_model_developer_profile">Model_developer_profile</string>
    <string name="title_activity_cam">Cam</string>
    <string name="title_activity_cam2">CAM2</string>
    <string name="title_activity_about_us">About_us</string>
    <string name="title_activity_label_image">Label_image</string>
    <string name="title_activity_new_crop">New_crop</string>
    <string name="title_activity_draw_image">Draw_image</string>
    <string name="title_activity_insect_form">Insect_form</string>
    <string name="title_activity_see_annotation">See_annotation</string>
    <string name="title_activity_image_view">image_view</string>
    <string name="title_activity_see_annotation_validator">See_annotation_validator</string>
    <string name="title_activity_see_annotation_admin">See_annotation_admin</string>
    <string name="title_activity_splash_">Splash_Activity</string>
    <string name="title_activity_all_in_one_annotation">All_in_one_annotation</string>
    <string name="title_activity_identify_disease">Identify_disease</string>
    <string name="title_activity_add_disease_info_validator">Add_disease_info_validator</string>
    <string name="title_activity_add_insect_info_validator">Add_insect_info_validator</string>
    <string name="title_activity_upload_image_validator">Upload_image_validator</string>
    <string name="title_activity_add_disease_info_admin">Add_disease_info_admin</string>
    <string name="title_activity_add_insect_info_admin">Add_insect_info_admin</string>
    <string name="title_activity_upload_activity">Upload_activity</string>
    <string name="title_activity_detect_disease_info">Detect_disease_info</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_admin_detected_image">Admin_detected_image</string>
    <string name="title_activity_disease_identifier_profile">DiseaseIdentifier_profile</string>
    <string name="title_activity_internet_not_working">InternetNotWorking</string>
    <string name="title_activity_validator_image_record1">Validator_image_record1</string>
    <string name="title_activity_list_record_image1">List_record_image1</string>
    <string name="title_activity_validator_list_image">Validator_list_image</string>
    <string name="title_activity_validator_update_profile">Validator_update_profile</string>
    <string name="title_activity_validator_change_password">Validator_change_password</string>
    <string name="title_activity_validator_list_image1">Validator_list_image1</string>
    <string name="title_activity_about_us1">About_us1</string>
    <string name="title_activity_admin_view_image">Admin_view_image</string>
    <string name="title_activity_update__app">Update_App</string>
    <string name="title_activity_maps_activity">Maps_activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_admin__dashboard">Admin_Dashboard</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="title_activity_signup">signup</string>
    <string name="title_activity_farmer_profile">Farmer_profile</string>
    <string name="title_activity_outgoing">Outgoing</string>
    <string name="title_activity_incoming">Incoming</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_list_request">List_request</string>
    <string name="title_activity_expert_signup">expert_signup</string>
    <string name="title_activity_expert_list">expert_list</string>
    <string name="title_activity_call_by_expert">Call_by_expert</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_dashboard_validator_wise">Dashboard_validator_wise</string>
    <string name="title_activity_dashboard_crop_wise">Dashboard_crop_wise</string>
    <string name="title_activity_view_form">View_form</string>
    <string name="title_activity_view_image1">ViewImage1</string>
    <string name="title_activity_validator_crop_wise">Validator_crop_wise</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_validator_dashboard">Validator_dashboard</string>
    <string name="title_activity_view_form1">View_form1</string>
    <string name="title_activity_crop_wise">Crop_wise</string>
    <string name="title_activity_healthy_crop">Healthy_crop</string>
    <string name="title_activity_crop_wise1">Crop_wise1</string>
    <string name="title_activity_reporting_profile">Reporting_profile</string>
    <string name="title_activity_healthy_image">Healthy_image</string>
    <string name="title_activity_pest_list">Pest_list</string>
    <string name="title_activity_disease_list1">Disease_list1</string>
    <string name="title_activity_account_reporting">Account_reporting</string>
    <string name="title_activity_account_expert">Account_expert</string>
    <string name="title_activity_list_expert">List_expert</string>
    <string name="title_activity_add_specialization">Add_specialization</string>
    <string name="disease_list">Disease list</string>
    <string name="pest_list">Pest list</string>
    <string name="title_activity_disease_list_validator">Disease_list_validator</string>
    <string name="title_activity_pest_list_validator">Pest_list_validator</string>
    <string name="title_activity_expert_profile">Expert_profile</string>
    <string name="title_activity_image_list">Image_list</string>
    <string name="title_activity_identification_profile">Identification_profile</string>
    <string name="title_activity_image_list_user">Image_list_user</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_account_identification">Account_identification</string>
    <string name="title_activity_assign_crop">Assign_crop</string>
    <string name="proceed">AI-DISC (Artificial Intelligence-based Disease Identification System for Crops) is an AI-based mobile application for automatic detection of diseases of major crops using digital images. The app is aimed to provide the real-time crop protection solution to the extension workers, researchers and scientists at their fingertips. This application has the following key features:</string>
    <string name="proceedScreen2_1">AI-DISC (Artificial Intelligent based Disease Identification System for Crops) is an AI-enabled mobile application for image based diseases and pests identification that reduces the involvement of domain experts. The comprehensive identification features along with appropriate management practices of AI-DISC provide suitable solutions to the farmers. This application allows farmers to communicate with the domain experts through a real-time communication facility.</string>
    <string name="identification_page">This AI-enabled mobile application does image based diseases and pests identification that reduces the involvement of domain experts. The comprehensive identification features along with appropriate management practices of AI-DISC provide suitable solutions to the farmers.</string>
    <string name="proceedScreen2_2">! Important Information !</string>
    <string name="proceedScreen2_3">Currently, the mobile application is able to identify diseases of 14 crops viz. Rice, Wheat, Maize, Tomato, Mustard, Cotton, Chickpea, Groundnut, Chilli, Soybean, Coriander, Citrus (Mandarin),
        Grapes and Datepalm. (for these crops kindly proceed with Identification tab)</string>
    <string name="chooseImageVideo">Solve Your Problem using any one :</string>
    <string name="proceedScreen2_4">If you have images of other crops kindly proceed to the Expert Forum tab for solutions. </string>
    <string name="proceed1">\u2022 Automatic disease identification across multiple crops\n\u2022 Real time information related to crop protection problems\n\u2022 Query expert opinion through text or video chat</string>
    <string name="reporting_heading">AI-DISC gives an interface to fetch all incidences regarding disease, pest and other agriculture issues all over the country.</string>
    <string name="proceed3">\u2022 Automatic disease and pest identification\n\u2022 Image uploading facilities for Diseases, Insect-Pests, etc\n\u2022 Image verification and validation\n\u2022 Field-level testing of developed AI-based models</string>
    <string name="proceed4">Extension Workers:</string>
    <string name="project_about">The AI-DISC App has been developed and implemented under the projects viz. <b>"Investment in ICAR Leadership in Agriculture Higher Education, NAHEP-Component 2"</b> and <b>"Artificial Intelligence based mobile app for identification and advisory of maize diseases and insect pests"</b>.</string>
    <string name="proceed5">Researchers and Scientists:</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">"DISEASE IDENTIFICATION"</string>
    <string name="slide_1_desc">Image-based diagnosis of diseases of crops and recommendations of management practices</string>
    <string name="slide_2_title">PEST IDENTIFICATION</string>
    <string name="slide_2_desc">Image-based identification of insect-pests of crops and recommendations of management practices</string>
    <string name="slide_3_title">EXPERT FORUM</string>
    <string name="slide_3_desc">Consultation with domain-specific experts for precise and appropriate solutions </string>
    <string name="slide_4_title">REPORTING</string>
    <string name="slide_4_desc">Reporting the occurrence of field hazards for creating social awareness</string>
    <string name="debugMode">false</string>
    <string name="title_activity_welcome_screen">Welcome_screen</string>
</resources>