<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Fragment_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="Hi !"
            android:id="@+id/gd"
            android:textColor="@color/greendark" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="Hi !"
            android:id="@+id/usrname"
            android:textColor="@color/colorMaroon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:textStyle="bold|italic"
            android:text="Hi !"
            android:id="@+id/loc"
            android:textColor="@color/colorMaroon" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:gravity="end"
                android:layout_marginRight="10dp"
                android:src="@android:drawable/ic_menu_edit"
                tools:srcCompat="@drawable/ic_baseline_edit_24" />



        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:justificationMode="inter_word"
            android:text="@string/proceedScreen2_1"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:visibility="gone"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/proceedScreen2_2"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:visibility="gone"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:text="@string/proceedScreen2_3"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:visibility="gone"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/proceedScreen2_4"
            android:textColor="@color/red" />


        <Button
            android:id="@+id/checkgps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="get location" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editprofile"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#FFA500"
            app:cornerRadius="20sp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="Edit Profile"
            android:textColor="@color/white" />





    </LinearLayout>


</ScrollView>
